refactor: renombrar excepciones y repositorios para seguir mejores prácticas
BREAKING CHANGE: Se han renombrado todas las clases de excepciones y repositorios

- Eliminado sufijo 'NotFoundException' de todas las excepciones
- Renombrado a formato '[Entidad]Exception'
- Eliminado prefijo 'I' de interfaces de repositorio
- Actualizado referencias en servicios y controladores
- Implementado inyección de dependencias por constructor en LegajoService
- Mejorado manejo de excepciones en LegajoController
- Optimizado importaciones y tipos genéricos

Cambios principales:
- BajaNotFoundException -> BajaException
- CarreraNotFoundException -> CarreraException
- IBajaRepository -> BajaRepository
- ICarreraRepository -> CarreraRepository
... y otros cambios similares en todas las entidades

Testing:
✓ Pruebas unitarias ejecutadas
✓ Pruebas de integración verificadas
✓ Manejo de excepciones validado

Closes #22